<resources>
    <string name="app_name">ShareLocation</string>


    <!--<string name="facebook_app_id">528557537483823</string>-->
    <!--<string name="fb_login_protocol_scheme">fb528557537483823</string>-->


    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">App ask for permission to see your location</string>
    <string name="ok">OK</string>
    <string name="log_out">Log Out</string>
    <string name="log_in_facebook">Facebook</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="messages">Group Messages</string>
    <string name="uber">Order Uber</string>
    <string name="fingerprint">Finger Print</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add\n Friend</string>
    <string name="remove_friend">Remove\n Friend</string>
    <string name="default_notification_channel_id">notify</string>
    <string name="result_not_found">Result not found</string>
    <string name="friends_list">Friends List</string>

    <!--video chat-->

    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>

    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="nearby">is near you</string>
    <string name="send">Send</string>
    <string name="list_of_places">Share interesting place</string>
    <string name="placeFragment">place_fragment</string>
    <string name="share">Hi, I want to share with you cool place</string>


    <string name="network_error">Please check your network connection and try again</string>
    <string name="connection_problem">Connection Problem</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="title_activity_finger_print">FingerPrintActivity</string>

    <string name="title_activity_uber_login">Uber Login</string>

    <string name="rider_login">RIDER SIGN IN</string>
    <string name="driver_login">DRIVER SIGN IN</string>
    <string name="uber_sign_in">Sign In</string>


    <string name="log_in_google">Google</string>
    <string-array name="text_ham_button" >
        <item>send message to friend</item>
        <item>start video with friend</item>
    </string-array>
</resources>

