<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sharing_location"
            android:icon="@drawable/share_icon"
            android:title="@string/location_sharing"/>

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/share_icon"
            android:title="@string/messages"/>

        <item
            android:id="@+id/nav_uber"
            android:icon="@drawable/share_icon"
            android:title="@string/uber"/>


        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/share_icon"
            android:title="@string/log_out"/>

    </group>

    <item android:title="Caltrain and Bart TimeTable">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_caltrain"
                    android:icon="@drawable/share_icon"
                    android:title="Caltrain" />
                <item
                    android:id="@+id/nav_bart"
                    android:icon="@drawable/share_icon"
                    android:title="Bart" />
            </group>
        </menu>
    </item>

</menu>