<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hinapolina.com.sharelocation.activities.UberLoginActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/tv_uber_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackground"
        android:shadowColor="#ff6cc450"
        android:shadowRadius="5"
        android:shadowDy="5"
        android:shadowDx="5"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/uber_sign_in"
        android:textSize="@dimen/text_size_26" />


        <LinearLayout
            android:id="@+id/linear_rider_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:layout_marginRight="@dimen/margin_left_36"
            android:layout_marginLeft="@dimen/margin_left_36"
            android:layout_below="@id/tv_uber_sign"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/icon_uber" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_32"
                android:text="@string/rider_login"
                android:textSize="@dimen/text_size_18"
                android:textColor="#FFFFFF"/>
        </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_driver_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:layout_marginTop="@dimen/margin_left_36"
        android:layout_marginRight="@dimen/margin_left_36"
        android:layout_marginLeft="@dimen/margin_left_36"
        android:layout_below="@id/linear_rider_login"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_uber"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_uber" />

        <TextView
            android:id="@+id/tv_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_left_32"
            android:text="@string/driver_login"
            android:textSize="@dimen/text_size_18"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</RelativeLayout>

